--- a/website/azuredevops.erb
+++ b/website/azuredevops.erb
@@ -1,4 +1,3 @@
-
 <% wrap_layout :inner do %>
     <% content_for :sidebar do %>
         <div class="docs-sidebar hidden-print affix-top" role="complementary">
@@ -351,6 +350,9 @@
                 </li>
                 <li>
                   <a href="/docs/providers/azuredevops/r/workitem.html">azuredevops_workitem</a>
+                </li>
+                <li>
+                  <a href="/docs/providers/azuredevops/r/serviceendpoint_project_permissions.html">azuredevops_serviceendpoint_project_permissions</a>
                 </li>
               </ul>
             </li>
